fix scrollbar issue on small screens

--- a/frontend/src/shared/components/baseCard/baseCard.css
+++ b/frontend/src/shared/components/baseCard/baseCard.css
@@ -1,5 +1,5 @@
 .base-card {
-    --card-text-width: 400px;
+    --card-text-width: 330px;
 
     display: block;
     position: relative;
